Trying to fix overflow issue on mobile by making square sizing more responsive

--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@ h1 {
 	justify-content: center;
 
 	/* background-color: hsl(10, 59%, 31%); */
-	background-color: magenta;
+	background-color: turquoise;
 	border: 4px solid;
 	border-left-color: hsl(10, 59%, 44%);
 	border-top-color: hsl(10, 59%, 44%);
